src/lib/testcases/fails/basic/fn_bad_arg_nb/main.rk
f a = a

main = f 2, 2
